# matrix-completion-benchmarks

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy-website.yml
benchmarks/: catalog.yaml  nnm_catalog.yaml
benchmarks/reports/noise_sweep/: noise_sweep_results.csv
examples/: __init__.py  custom_plugin.py
scripts/: count_mcar_imputation_constraint_violations.py  download_benchmarks.sh  evaluate_tabular_imputation.py  find_ckd_logistic_feature_importance.py  generate_missingness_pattern.py  generate_multiple_imputations.py  plot_ckd_mcar_mar_seed_ci.py  plot_ckd_pattern_metrics_bars.py  plot_hankel_results.py  plot_noise_sweep.py  prepare_ckd_ehr_tabular_benchmark.py  prepare_tabular_benchmark.py  publish_synthetic_denoise_to_website.sh  run_ckd_all_algorithms.sh  run_ckd_ehr_classification_benchmark.py  run_ckd_ehr_regression_benchmark.py  run_hankel_benchmarks.py  run_saved_synthetic_tabimpute_v2.py  run_synthetic_denoise_benchmark.py  run_synthetic_denoise_e2e.sh  run_synthetic_noise_sweep.py
src/mcbench/: __init__.py  cli.py  io.py  registry.py  types.py
src/mcbench/algorithms/: __init__.py  base.py  baselines.py  (+1 more)
website/: README.md  app.js  index.html  styles.css
website/data/: README.md  ckd_ehr_classification_prelim_summary.csv  ckd_ehr_classification_sweep_summary.csv  ckd_ehr_classification_sweep_summary.pre_hyperimpute_merge_20260310_134732.csv  ckd_ehr_classification_sweep_summary.pre_mnar_merge_20260310_135838.csv  ckd_ehr_regression_prelim_summary.csv  ckd_ehr_regression_sweep_summary.csv  noise_sweep_results.csv
(+19 files in other folders)
