[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcbench"
version = "0.1.0"
description = "Modular benchmarks for matrix completion algorithms."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "PyYAML>=6.0"]

[project.optional-dependencies]
impute = [
  "fancyimpute>=0.7.0",
  "hyperimpute>=0.1.17",
  "ForestDiffusion>=1.0.6",
  "pandas>=2.0",
]

[project.scripts]
mcbench = "mcbench.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
